# schwager-stats

./: .gitignore  LICENSE  README.md  pyproject.toml
src/schwager_stats/: __init__.py
