[project]
name = "schwager-stats"
version = "0.1.0"
description = "the unofficial Market Wizard's performance evaluation metrics"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "John Ho", email = "jho.yvr+git@gmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
yfinance = [
    "yfinance>=0.2.64",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
